# recofy

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yaml  env.example  manage.py  mydatabase  pyproject.toml  setup.cfg
.docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.prod.yaml
.github/workflows/: django.yml
apps/api/: pagination.py  urls.py
apps/recofy/: admin.py  apis.py  apps.py  constants.py  db.md  serializers.py  urls.py  utils.py
apps/recofy/admin/: __init__.py  albums.py  artists.py  common.py  tracks.py
apps/recofy/migrations/: 0001_initial.py  0002_alter_album_genres_alter_track_preview_url.py  0003_album_is_playable.py  0004_alter_album_available_markets.py
apps/recofy/models/: __init__.py  album.py  artists.py  common.py  tracks.py
apps/recofy/services/: albums.py  artists.py  following.py  playlists.py  spotify.py  tracks.py
django_base/: asgi.py  celery_app.py  urls.py  wsgi.py
django_base/extra_settings/: celery.py  drf_spectacular.py  rest_framework.py  spotify.py
django_base/settings/: base.py  development.py  local.py  prod.py  production.py  test.py
docker/: Dockerfile.prod  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.yaml
nginx/: Dockerfile  nginx.conf
prometheus/: prometheus.yml
