[tool.poetry]
name = "local-library"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
djangorestframework = "^3.15.1"
pre-commit = "^3.7.1"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
